Refactor MovimentoEstoqueService to replace Collectors.toList() with Stream.toList()